Added target folders to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # the part-1 folder as it will be created during the workshop
 /part-1-dev-mode
 
+# Maven
+target
+
 # Compiled class file
 *.class
 
