--- a/bonus-a-cloud/src/main/resources/application.properties
+++ b/bonus-a-cloud/src/main/resources/application.properties
@@ -1,2 +1,18 @@
+#Random API to generate Random data
+random-coffee-api=random-data-api.com/api/coffee/random_coffee
 
+#Ask workshop organizers to give you the Webhook URL needed to setup the config for slack
+webhook-url=INSERT_HERE_VALUE
+
+# H2 Database
+quarkus.datasource.jdbc.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+quarkus.datasource.db-kind=h2
+quarkus.datasource.jdbc.max-size=8
+quarkus.hibernate-orm.database.generation=drop-and-create
+
+# Kafka configuration
+camel.component.kafka.brokers=<YOUR_KAFKA_BROKERS_URL>
+camel.component.kafka.security-protocol=SASL_SSL
+camel.component.kafka.sasl-mechanism=PLAIN
+camel.component.kafka.sasl-jaas-config=org.apache.kafka.common.security.plain.PlainLoginModule required username="<YOUR_KAFKA_SASL_CLIENT_ID>" password="<YOUR_KAFKA_SASL_CLIENT_SECRET>";
 
