--- a/part-3-components/pom.xml
+++ b/part-3-components/pom.xml
@@ -63,6 +63,24 @@
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-broker</artifactId>
             <version>5.16.3</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>>org.apache.camel</groupId>
+                    <artifactId>camel-jms</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>>org.apache.camel</groupId>
+                    <artifactId>camel-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>>org.apache.camel</groupId>
+                    <artifactId>camel-spring</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>>org.apache.camel</groupId>
+                    <artifactId>camel-activemq</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
