Fix an issue where activemq-all dependencies shaded another version of camel classes

--- a/part-3-components/pom.xml
+++ b/part-3-components/pom.xml
@@ -61,7 +61,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-all</artifactId>
+            <artifactId>activemq-broker</artifactId>
             <version>5.16.3</version>
         </dependency>
         <dependency>
