Upgrade to Quarkus Platform 2.16.4.Final

--- a/pom.xml
+++ b/pom.xml
@@ -9,16 +9,15 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <properties>
-        <compiler-plugin.version>3.8.1</compiler-plugin.version>
-        <maven.compiler.parameters>true</maven.compiler.parameters>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
-        <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-        <quarkus.platform.version>2.12.1.Final</quarkus.platform.version>
-        <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
+	<compiler-plugin.version>3.10.1</compiler-plugin.version>
+	<maven.compiler.release>17</maven.compiler.release>
+	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	<quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
+	<quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
+	<quarkus.platform.version>2.16.4.Final</quarkus.platform.version>
+	<skipITs>true</skipITs>
+	<surefire-plugin.version>3.0.0-M7</surefire-plugin.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -56,7 +55,7 @@
                 <plugin>
                     <!-- Needed for dependency:go-offline in multi-modules projects -->
                     <artifactId>maven-dependency-plugin</artifactId>
-                    <version>3.2.0</version>
+                    <version>3.5.0</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -76,7 +75,16 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
+		</plugin>
+	      <plugin>
+		<artifactId>maven-compiler-plugin</artifactId>
+		<version>${compiler-plugin.version}</version>
+		<configuration>
+			<compilerArgs>
+				<arg>-parameters</arg>
+			</compilerArgs>
+		</configuration>
+	      </plugin>
         </plugins>
     </build>
     <modules>
