--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	<quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
 	<quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-	<quarkus.platform.version>2.16.4.Final</quarkus.platform.version>
+	<quarkus.platform.version>3.0.0.Beta1</quarkus.platform.version>
 	<skipITs>true</skipITs>
 	<surefire-plugin.version>3.0.0-M7</surefire-plugin.version>
     </properties>
@@ -46,7 +46,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel.quarkus</groupId>
-            <artifactId>camel-quarkus-activemq</artifactId>
+            <artifactId>camel-quarkus-jms</artifactId>
         </dependency>
     </dependencies>
     <build>
