--- a/part-5-kafka/pom.xml
+++ b/part-5-kafka/pom.xml
@@ -6,14 +6,14 @@
   <artifactId>part-5-kafka</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <properties>
-    <compiler-plugin.version>3.8.1</compiler-plugin.version>
-    <maven.compiler.release>11</maven.compiler.release>
+    <compiler-plugin.version>3.11.0</compiler-plugin.version>
+    <maven.compiler.release>17</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-    <quarkus.platform.version>3.0.0.Beta1</quarkus.platform.version>
-    <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
+    <quarkus.platform.version>3.0.0.CR1</quarkus.platform.version>
+    <surefire-plugin.version>3.0.0</surefire-plugin.version>
     <kotlin.version>1.6.10</kotlin.version>
   </properties>
   <dependencyManagement>
