--- a/part-5-kafka/src/main/resources/application.properties
+++ b/part-5-kafka/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+quarkus.analytics.disabled = true
+
 #Random API to generate Random data
 random-coffee-api=random-data-api.com/api/coffee/random_coffee
 
