--- a/part-3-components/src/main/resources/application.properties
+++ b/part-3-components/src/main/resources/application.properties
@@ -1,2 +1,4 @@
+quarkus.analytics.disabled = true
+
 #It's possible to configure a component option from here
 camel.component.activemq.brokerURL=tcp://0.0.0.0:61617
