--- a/part-4-eips/pom.xml
+++ b/part-4-eips/pom.xml
@@ -15,7 +15,9 @@
         <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
         <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
         <quarkus.platform.version>3.2.1.Final</quarkus.platform.version>
-        <surefire-plugin.version>3.0.0</surefire-plugin.version>
+	<surefire-plugin.version>3.0.0</surefire-plugin.version>
+	<maven.plugin.validation>brief</maven.plugin.validation>
+	<quarkus.analytics.disabled>true</quarkus.analytics.disabled>
     </properties>
     <dependencyManagement>
         <dependencies>
