--- a/part-5-kafka/pom.xml
+++ b/part-5-kafka/pom.xml
@@ -15,6 +15,8 @@
     <quarkus.platform.version>3.2.1.Final</quarkus.platform.version>
     <surefire-plugin.version>3.0.0</surefire-plugin.version>
     <kotlin.version>1.6.10</kotlin.version>
+    <maven.plugin.validation>brief</maven.plugin.validation>
+    <quarkus.analytics.disabled>true</quarkus.analytics.disabled>
   </properties>
   <dependencyManagement>
     <dependencies>
